--- a/app/views/administrateurs/types_de_champ/simplify.html.erb
+++ b/app/views/administrateurs/types_de_champ/simplify.html.erb
@@ -3,10 +3,14 @@
 <%= render partial: 'administrateurs/breadcrumbs',
   locals: { steps: [['Démarches', admin_procedures_path],
                     [@procedure.libelle.truncate_words(10), admin_procedure_path(@procedure)],
-                    ['Amélioration des champs']] } %>
+                    ['Amélioration de la qualité du formulaire']] } %>
 
 <%= render LLM::StepperComponent.new(step_component: LLM::SuggestionFormComponent.new(llm_rule_suggestion: @llm_rule_suggestion)) do |stepper| %>
-  <% if LLMRuleSuggestion.last_rule?(@llm_rule_suggestion.rule) %>
+  <% stepper.with_header do %>
+    <%= render LLM::HeaderComponent.new(llm_rule_suggestion: @llm_rule_suggestion) %>
+  <% end %>
+
+  <% if LLMRuleSuggestion.last_rule?(@llm_rule_suggestion.rule) || true %>
     <%= render Dsfr::AlertComponent.new(state: :success) do |component| %>
       <% component.with_body do %>
         <p>
@@ -19,10 +23,6 @@
           <%= link_to "Revenir à l’écran de gestion", admin_procedure_path(@procedure), class: 'fr-link fr-icon-arrow-left-line fr-link--icon--left fr-icon--sm' %>
         </p>
       <% end %>
-    <% end %>
-  <% else %>
-    <% stepper.with_header do %>
-      <%= render LLM::HeaderComponent.new(llm_rule_suggestion: @llm_rule_suggestion) %>
     <% end %>
   <% end %>
 <% end %>
