style(simpliscore): search-ai-line button icon & ai warn mention

--- a/app/components/llm/suggestion_form_component/suggestion_form_component.html.erb
+++ b/app/components/llm/suggestion_form_component/suggestion_form_component.html.erb
@@ -24,9 +24,13 @@
     <% end %>
   <% else %>
     <div class="border-background-contrast-grey fr-p-2w">
-      <p class="fr-badge fr-badge--info fr-mb-3w">
-        <%= suggestions_count %>
-        <%= 'suggestion'.pluralize(suggestions_count) %>
+      <p class="fr-mb-3w flex align-center">
+        <span class="fr-badge fr-badge--info fr-mr-1w">
+          <%= suggestions_count %>
+          <%= 'suggestion'.pluralize(suggestions_count) %>
+        </span>
+
+        <span class="fr-hint-text">Ces suggestions utilisent l’IA. Vérifiez toujours ce qui est proposé.</span>
       </p>
 
       <%= form_for llm_rule_suggestion,
